[gd_scene load_steps=6 format=3 uid="uid://iuhyo1f1t4se"]

[ext_resource type="Script" path="res://scenes/ui/game_menu_screen.gd" id="1_i05sj"]
[ext_resource type="Theme" uid="uid://j1tmgy7rj3kv" path="res://scenes/ui/game_ui_theme.tres" id="1_pfimf"]
[ext_resource type="PackedScene" uid="uid://obcrey4h8dwf" path="res://scenes/ui/game_menu_screen_background.tscn" id="1_pvjh8"]
[ext_resource type="PackedScene" uid="uid://bsvfdv7ddo0id" path="res://scenes/components/mouse_cursor_component.tscn" id="2_b1q6k"]
[ext_resource type="Texture2D" uid="uid://dhgxn5kd0hei1" path="res://assets/ui/mouse_icon.png" id="3_02awy"]

[node name="GameMenuScreen" type="CanvasLayer"]
script = ExtResource("1_i05sj")

[node name="MouseCursorComponent" parent="." instance=ExtResource("2_b1q6k")]
cursor_component_texture = ExtResource("3_02awy")

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("1_pvjh8")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pfimf")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.833838, 0.459885, 0.338601, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 54
text = "CROPTAILS"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_pfimf")
theme_type_variation = &"GameMenuButton"
text = "START"

[node name="SaveGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_pfimf")
theme_type_variation = &"GameMenuButton"
text = "SAVE"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_pfimf")
theme_type_variation = &"GameMenuButton"
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
